# python-openbmclapi

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_en.md  CODE_OF_CONDUCT_en_en.md  CONTRIBUTING.md  Dockerfile  Globals.py  LICENSE  LICNESE  README.md  README_en.md  VERSION  changelogithub.config.json  cluster.py  config.py  crowdin.yml  css.css  css.json  debugger.py  get_css.py  globals.py  main.py  pyproject.toml  readme.md  requirements.txt  split.py  start.bat  start_backend.bat  start_sync.bat  stats.py  test.py  utils.py  web.py
.github/: FUNDING.yml
assets/: fixed_location.fxdb  index.html  ipdb.ipdb
backend/: __init__.py
bmclapi_dashboard/: index.html
common/: __init__.py  database.py  env.py  logger.py  storage.py  telegram.py  timings.py  units.py
config/: __init__.py  config-1.yaml  config.properties.example  config.yaml.example  config.yml.example
container/: cluster.py  config.py  logger.py  main.py  stats.py  timer.py  utils.py  web.py
core/: __init__.py  abc.py  api.py  cache.py  certificate.py  classes.py  client.py  cluster.py  config.py  const.py  dashboard.py  database.py  env.py  exceptions.py  i18n.py  ipsearcher.py  locale.py  location.py  logger.py  network.py  orm.py  router.py  scheduler.py  server.py  statistics.py  stats.py  system.py  timer.py  timings.py  types.py  unit.py  units.py  update.py  utils.py  web.py  web_old.py
i18n/: CODE_OF_CONDUCT_en.md  CONTRIBUTING_en.md  README_en.md  en_us.json  readme.md  zh_cn.json
installer/: LICENSE  installer.sh  py-openbmclapi.service  python-openbmclapi.service  start.sh
(+84 files in other folders)
